--- a/admin/assets/css/components.css
+++ b/admin/assets/css/components.css
@@ -15,8 +15,8 @@
   font-family: inherit;
   border: none;
   -webkit-border-radius: 3px;
-  border-radius: 3px;
   -moz-border-radius: 3px;
+  border-radius: 3px;
   background-clip: padding-box;
   box-shadow: 0 0 28px rgba(0, 0, 0, 0.15);
 }
@@ -29,10 +29,7 @@
 .popover .arrow {
   border-color: transparent !important;
 }
-/* Tooltips */
-.tooltip {
-/*  font-family: 'Hind Madurai', sans-serif;*/
-}
+
 .tooltip .tooltip-inner {
   padding: 4px 10px;
   border-radius: 2px;
@@ -257,8 +254,8 @@
   border: 1px solid #5c4fab !important;
 }
 .btn-pink {
-  background-color: #F06292 !important;
-  border: 1px solid #F06292 !important;
+  background-color: #f06292 !important;
+  border: 1px solid #f06292 !important;
 }
 .btn-pink:hover,
 .btn-pink:focus,
@@ -433,7 +430,7 @@
   margin-top: 0;
   text-transform: uppercase;
   letter-spacing: 0.03em;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .panel-sub-title {
   margin-bottom: 0px;
@@ -469,7 +466,7 @@
   background-color: #6b5fb5;
 }
 .panel-pink > .panel-heading {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .panel-orange > .panel-heading {
   background-color: #ff9800;
@@ -521,8 +518,8 @@
   color: #6b5fb5 !important;
 }
 .panel-border.panel-pink .panel-heading {
-  border-color: #F06292 !important;
-  color: #F06292 !important;
+  border-color: #f06292 !important;
+  color: #f06292 !important;
 }
 .panel-border.panel-orange .panel-heading {
   border-color: #ff9800 !important;
@@ -570,7 +567,7 @@
   margin-top: 9px;
   text-transform: uppercase;
   letter-spacing: 0.03em;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .portlet .portlet-heading .portlet-widgets {
   display: inline-block;
@@ -680,7 +677,7 @@
   display: inline-block;
   padding-left: 5px;
   position: relative;
-  font-family: 'Varela Round', sans-serif;
+  font-family: "Varela Round", sans-serif;
   font-weight: normal;
 }
 .checkbox label::before {
@@ -728,7 +725,7 @@
 }
 .checkbox input[type="checkbox"]:checked + label::after {
   content: "\F12C";
-  font-family: 'Material Design Icons';
+  font-family: "Material Design Icons";
   font-weight: bold;
 }
 .checkbox input[type="checkbox"]:disabled + label::before {
@@ -794,8 +791,8 @@
   color: #ffffff;
 }
 .checkbox-pink input[type="checkbox"]:checked + label::before {
-  background-color: #F06292;
-  border-color: #F06292;
+  background-color: #f06292;
+  border-color: #f06292;
 }
 .checkbox-pink input[type="checkbox"]:checked + label::after {
   color: #ffffff;
@@ -815,7 +812,7 @@
   display: inline-block;
   padding-left: 5px;
   position: relative;
-  font-family: 'Varela Round', sans-serif;
+  font-family: "Varela Round", sans-serif;
   font-weight: normal;
 }
 .radio label::before {
@@ -945,13 +942,13 @@
   background-color: #6b5fb5;
 }
 .radio-pink input[type="radio"] + label::after {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .radio-pink input[type="radio"]:checked + label::before {
-  border-color: #F06292;
+  border-color: #f06292;
 }
 .radio-pink input[type="radio"]:checked + label::after {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 /* =============
    Modals
@@ -959,7 +956,7 @@
 .modal .modal-dialog .modal-content {
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
-  border-color: #DDDDDD;
+  border-color: #dddddd;
   border-radius: 2px;
   box-shadow: none;
   padding: 25px;
@@ -1032,7 +1029,7 @@
   color: #313a46;
   text-transform: uppercase;
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .nav-tabs > li > a:hover {
   background-color: rgba(152, 166, 173, 0.1);
@@ -1060,7 +1057,7 @@
   text-align: center;
   white-space: nowrap;
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   text-transform: uppercase;
 }
 .tabs-vertical-env .nav.tabs-vertical li.active > a {
@@ -1157,7 +1154,7 @@
   background-color: #6b5fb5;
 }
 .progress-bar-pink {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .progress-bar-custom {
   background-color: #7fc1fc;
@@ -1263,7 +1260,7 @@
 }
 .alert .alert-link {
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .alert-icon {
   padding-left: 50px;
@@ -1375,22 +1372,22 @@
 /* =============
    Widgets
 ============= */
-.widget-box-one{
+.widget-box-one {
   padding: 10px;
 }
 .widget-box-one .widget-one-icon {
   background-color: #e5edfc !important;
-    color: #5a8dee !important;
-    /* position: absolute; */
-    /* right: 30px; */
-    font-size: 28px !important;
-    /* top: 0; */
-    padding: 8px;
-    /* color: #f3f3f3; */
-    /* overflow: hidden; */
-    vertical-align: middle;
-    /* line-height: 2 !important; */
-    border-radius: 50px;
+  color: #5a8dee !important;
+  /* position: absolute; */
+  /* right: 30px; */
+  font-size: 28px !important;
+  /* top: 0; */
+  padding: 8px;
+  /* color: #f3f3f3; */
+  /* overflow: hidden; */
+  vertical-align: middle;
+  /* line-height: 2 !important; */
+  border-radius: 50px;
 }
 .widget-box-one .wigdet-one-content {
   position: relative;
@@ -1512,8 +1509,8 @@
   width: 80px;
   text-align: center;
   -webkit-border-radius: 50%;
-  border-radius: 50%;
   -moz-border-radius: 50%;
+  border-radius: 50%; 
   background-clip: padding-box;
   border: 1px dashed #98a6ad;
   background-color: #f3f3f3;
@@ -1555,7 +1552,7 @@
   border-left-color: #3b3e47;
 }
 .tilebox-pink {
-  border-left-color: #F06292;
+  border-left-color: #f06292;
 }
 .tilebox-purple {
   border-left-color: #6b5fb5;
@@ -1643,7 +1640,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: bold;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   position: relative;
 }
 .conversation-list .ctext-wrap p {
@@ -1719,7 +1716,7 @@
   border-bottom: none;
 }
 .todo-list label {
-  font-family: 'Varela Round', sans-serif;
+  font-family: "Varela Round", sans-serif;
 }
 .todo-send {
   padding-left: 0;
@@ -1733,7 +1730,7 @@
   line-height: 32px;
   text-align: center;
   border-radius: 50%;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   font-size: 16px;
 }
 /* =============
@@ -1745,10 +1742,10 @@
   padding: 8px 16px;
   height: auto;
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   -webkit-border-radius: 3px;
-  border-radius: 3px;
   -moz-border-radius: 3px;
+  border-radius: 3px;
   background-clip: padding-box;
 }
 .custom-dd .dd-list .dd-item .dd-handle:hover {
@@ -1780,7 +1777,7 @@
   padding: 8px 16px 8px 46px;
   background: #f3f3f3;
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .custom-dd-empty .dd-list .dd3-content:hover {
   color: #7fc1fc;
@@ -1845,13 +1842,13 @@
 .fc-toolbar h2 {
   font-size: 18px;
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   line-height: 30px;
   text-transform: uppercase;
 }
-.fc-day-grid-event .fc-time {
-/*  font-family: 'Hind Madurai', sans-serif;*/
-}
+/* .fc-day-grid-event .fc-time { */
+  /*  font-family: 'Hind Madurai', sans-serif;*/
+/* } */
 .fc-day {
   background: #ffffff;
 }
@@ -1948,7 +1945,7 @@
 }
 .external-event.bg-pink {
   background-color: rgba(240, 98, 146, 0.3) !important;
-  color: #F06292;
+  color: #f06292;
 }
 .external-event.bg-purple {
   background-color: rgba(107, 95, 181, 0.3) !important;
@@ -1973,12 +1970,12 @@
 .fc-basic-view td.fc-week-number span {
   padding-right: 8px;
   font-weight: 700;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .fc-basic-view td.fc-day-number {
   padding-right: 8px;
   font-weight: 700;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 /* =============
    Form
@@ -1986,11 +1983,10 @@
 /* Form components */
 label {
   font-weight: 400;
-   font-family: 'Hind Madurai', sans-serif; 
+  font-family: "Hind Madurai", sans-serif;
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: inherit;
- 
 }
 textarea.form-control {
   min-height: 90px;
@@ -2154,7 +2150,7 @@ input[data-switch] + label:before {
   transition: all 0.1s ease-in-out;
 }
 input[data-switch] + label:after {
-  content: '';
+  content: "";
   position: absolute;
   left: 3px;
   background-color: #f7f7f7;
@@ -2208,7 +2204,7 @@ input[data-switch="inverse"]:checked + label {
   background-color: #3b3e47;
 }
 input[data-switch="pink"]:checked + label {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 input[data-switch="purple"]:checked + label {
   background-color: #6b5fb5;
@@ -2333,14 +2329,14 @@ input[data-switch="teal"]:checked + label {
 }
 .btn-switch-pink > input[type="checkbox"] + .btn,
 .btn-switch-pink > input[type="checkbox"]:checked + .btn > em {
-  color: #F06292 !important;
+  color: #f06292 !important;
 }
 .btn-switch-pink > input[type="checkbox"] + .btn,
 .btn-switch-pink > input[type="checkbox"] + .btn > em {
-  border-color: #F06292 !important;
+  border-color: #f06292 !important;
 }
 .btn-switch-pink > input[type="checkbox"]:checked + .btn {
-  background-color: #F06292 !important;
+  background-color: #f06292 !important;
 }
 .btn-switch-purple > input[type="checkbox"] + .btn,
 .btn-switch-purple > input[type="checkbox"]:checked + .btn > em {
@@ -2391,7 +2387,8 @@ input[data-switch="teal"]:checked + label {
   margin-bottom: 10px;
 }
 .ms-container {
-  background: transparent url('../plugins/multiselect/img/multiple-arrow.png') no-repeat 50% 50%;
+  background: transparent url("../plugins/multiselect/img/multiple-arrow.png")
+    no-repeat 50% 50%;
   width: 100% !important;
   max-width: 360px !important;
 }
@@ -2426,7 +2423,7 @@ input[data-switch="teal"]:checked + label {
   width: 100% !important;
 }
 .select2-container .select2-selection--single {
-  border: 1px solid #E3E3E3 !important;
+  border: 1px solid #e3e3e3 !important;
   height: 38px !important;
 }
 .select2-container .select2-selection--single .select2-selection__rendered {
@@ -2442,11 +2439,15 @@ input[data-switch="teal"]:checked + label {
   border-color: #999 transparent transparent transparent;
   border-width: 6px 6px 0 6px;
 }
-.select2-container--open .select2-selection--single .select2-selection__arrow b {
+.select2-container--open
+  .select2-selection--single
+  .select2-selection__arrow
+  b {
   border-color: transparent transparent #999 transparent !important;
   border-width: 0 6px 6px 6px !important;
 }
-.select2-container--default .select2-results__option--highlighted[aria-selected] {
+.select2-container--default
+  .select2-results__option--highlighted[aria-selected] {
   background-color: #7fc1fc;
 }
 .select2-results__option {
@@ -2456,8 +2457,8 @@ input[data-switch="teal"]:checked + label {
   border: 1px solid #e3e3e3 !important;
   padding-top: 5px;
   -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
 }
 .select2-search input {
   border: 1px solid #e3e3e3 !important;
@@ -2515,7 +2516,9 @@ input[data-switch="teal"]:checked + label {
   display: block;
 }
 /* Bootstrap-select */
-.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(
+    .input-group-btn
+  ) {
   width: 100% !important;
 }
 .bootstrap-select .dropdown-toggle:focus {
@@ -2618,7 +2621,7 @@ input[data-switch="teal"]:checked + label {
   color: #313a46;
   font-weight: 600;
   font-size: 12px;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .daterangepicker select.hourselect,
 .daterangepicker select.minuteselect,
@@ -2667,12 +2670,12 @@ input[data-switch="teal"]:checked + label {
 .wizard > .steps a {
   font-size: 16px;
   text-align: center;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .wizard > .steps .number {
   font-size: 86px;
   line-height: 86px;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   position: absolute;
   left: 10px;
   top: -14px;
@@ -2831,7 +2834,7 @@ input[data-switch="teal"]:checked + label {
   background-color: #7fc1fc !important;
 }
 .mce-window-head .mce-title {
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .mce-window {
   padding: 20px !important;
@@ -2858,7 +2861,7 @@ input[data-switch="teal"]:checked + label {
    Tables
 ============= */
 th {
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
   font-weight: 600;
 }
 .table-centered td {
@@ -2868,7 +2871,7 @@ th {
 table.dataTable {
   margin-top: 10px !important;
   margin-bottom: 18px !important;
-      border-collapse: collapse !important;
+  border-collapse: collapse !important;
 }
 .table-bordered.dataTable > thead > tr > td,
 .table-bordered.dataTable > thead > tr > th {
@@ -2892,12 +2895,18 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:before {
   box-shadow: 0 0 3px rgba(67, 89, 102, 0.2);
   background-color: #4bd396;
 }
-table.dataTable.dtr-inline.collapsed > tbody > tr.parent > td:first-child:before,
-table.dataTable.dtr-inline.collapsed > tbody > tr.parent > th:first-child:before {
+table.dataTable.dtr-inline.collapsed
+  > tbody
+  > tr.parent
+  > td:first-child:before,
+table.dataTable.dtr-inline.collapsed
+  > tbody
+  > tr.parent
+  > th:first-child:before {
   background-color: #f5707a;
 }
 table.dataTable > tbody > tr.child span.dtr-title {
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 /* ColVid Tables */
 div.ColVis {
@@ -2999,9 +3008,12 @@ ul.ColVis_collection li {
 }
 .table-rep-plugin .checkbox-row input[type="checkbox"]:checked + label::after {
   content: "\f00c";
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
 }
-.table-rep-plugin .checkbox-row input[type="checkbox"]:disabled + label::before {
+.table-rep-plugin
+  .checkbox-row
+  input[type="checkbox"]:disabled
+  + label::before {
   background-color: #eeeeee;
   cursor: not-allowed;
 }
@@ -3113,7 +3125,7 @@ table.dataTable thead th.sorting_desc:after {
 .tablesaw thead tr:first-child th {
   font-weight: 600;
   border: none;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .tablesaw td {
   border-top: 1px solid rgba(243, 243, 243, 0.7) !important;
@@ -3128,15 +3140,23 @@ table.dataTable thead th.sorting_desc:after {
 .tablesaw tbody tr {
   border-bottom: none;
 }
-.tablesaw-sortable .tablesaw-sortable-head.tablesaw-sortable-ascending button:after,
-.tablesaw-sortable .tablesaw-sortable-head.tablesaw-sortable-descending button:after {
+.tablesaw-sortable
+  .tablesaw-sortable-head.tablesaw-sortable-ascending
+  button:after,
+.tablesaw-sortable
+  .tablesaw-sortable-head.tablesaw-sortable-descending
+  button:after {
   font-family: FontAwesome;
   font-size: 10px;
 }
-.tablesaw-sortable .tablesaw-sortable-head.tablesaw-sortable-ascending button:after {
+.tablesaw-sortable
+  .tablesaw-sortable-head.tablesaw-sortable-ascending
+  button:after {
   content: "\f176";
 }
-.tablesaw-sortable .tablesaw-sortable-head.tablesaw-sortable-descending button:after {
+.tablesaw-sortable
+  .tablesaw-sortable-head.tablesaw-sortable-descending
+  button:after {
   content: "\f175";
 }
 .tablesaw-bar .btn-select.btn-small:after,
@@ -3189,7 +3209,7 @@ table.dataTable thead th.sorting_desc:after {
   background-color: #3b3e47;
 }
 .table-colored.table-pink thead th {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .table-colored.table-purple thead th {
   background-color: #6b5fb5;
@@ -3251,10 +3271,10 @@ table.dataTable thead th.sorting_desc:after {
   background-color: #3b3e47;
 }
 .table-colored-bordered.table-bordered-pink {
-  border: 2px solid #F06292;
+  border: 2px solid #f06292;
 }
 .table-colored-bordered.table-bordered-pink thead th {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .table-colored-bordered.table-bordered-purple {
   border: 2px solid #6b5fb5;
@@ -3359,10 +3379,10 @@ table.dataTable thead th.sorting_desc:after {
   background-color: rgba(240, 98, 146, 0.8);
 }
 .table-colored-full.table-full-pink thead th {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .table-colored-full.table-full-pink tbody tr:hover {
-  background-color: #F06292;
+  background-color: #f06292;
 }
 .table-colored-full.table-full-purple {
   background-color: rgba(107, 95, 181, 0.8);
@@ -3420,7 +3440,7 @@ table.dataTable thead th.sorting_desc:after {
 }
 .legend tr {
   height: 20px;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .legendLabel {
   padding-left: 5px !important;
@@ -3523,10 +3543,10 @@ table.dataTable thead th.sorting_desc:after {
   text-align: center;
   pointer-events: none;
   z-index: 1;
-  -webkit-transition: opacity .2s linear;
-  -moz-transition: opacity .2s linear;
-  -o-transition: opacity .2s linear;
-  transition: opacity .2s linear;
+  -webkit-transition: opacity 0.2s linear;
+  -moz-transition: opacity 0.2s linear;
+  -o-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
 }
 .chartist-tooltip.tooltip-show {
   opacity: 1;
@@ -3548,7 +3568,7 @@ table.dataTable thead th.sorting_desc:after {
 .c3-chart-arcs-title {
   font-size: 18px;
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 .c3-tooltip tr {
   border: none !important;
@@ -3558,7 +3578,7 @@ table.dataTable thead th.sorting_desc:after {
 }
 .c3-tooltip .value {
   font-weight: 600;
-/*  font-family: 'Hind Madurai', sans-serif;*/
+  /*  font-family: 'Hind Madurai', sans-serif;*/
 }
 /* Sparkline chart */
 .jqstooltip {
@@ -3570,8 +3590,8 @@ table.dataTable thead th.sorting_desc:after {
   background-color: #313a46 !important;
   padding: 5px 10px !important;
   -webkit-border-radius: 3px;
-  border-radius: 3px;
   -moz-border-radius: 3px;
+  border-radius: 3px;
   border-color: #313a46 !important;
 }
 .jqsfield {
