Update new database

--- a/admin/assets/css/icons.css
+++ b/admin/assets/css/icons.css
@@ -130,30 +130,35 @@
 }
 .fa-rotate-90 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
+  filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 .fa-rotate-180 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
+  filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 .fa-rotate-270 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
+  filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg);
 }
 .fa-flip-horizontal {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1)";
+  filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1)";
   -webkit-transform: scale(-1, 1);
   -ms-transform: scale(-1, 1);
   transform: scale(-1, 1);
 }
 .fa-flip-vertical {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
+  filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
   -webkit-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
   transform: scale(1, -1);
@@ -2218,7 +2223,7 @@
 [class^="ti-"],
 [class*=" ti-"] {
   font-family: 'themify';
-  speak: none;
+  /* speak: none; */
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -8313,14 +8318,14 @@
 .mdi-flip-horizontal {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
-  filter: FlipH;
   -ms-filter: "FlipH";
+  filter: FlipH;
 }
 .mdi-flip-vertical {
   -webkit-transform: scaleY(-1);
   transform: scaleY(-1);
-  filter: FlipV;
   -ms-filter: "FlipV";
+  filter: FlipV;
 }
 /*# sourceMappingURL=materialdesignicons.css.map */
 /*!
@@ -8948,7 +8953,7 @@ MIT License: https://github.com/driftyco/ionicons
 .ion-xbox {
   display: inline-block;
   font-family: "Ionicons";
-  speak: none;
+  /* speak: none; */
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -10832,7 +10837,7 @@ MIT License: https://github.com/driftyco/ionicons
   font-family: 'typicons';
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  /* speak: none; */
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
@@ -10840,7 +10845,7 @@ MIT License: https://github.com/driftyco/ionicons
   font-size: 1em;
   text-align: center;
   -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
+  /* font-smoothing: antialiased; */
   text-rendering: optimizeLegibility;
 }
 /* Code for individual icons */
